--- a/ECommerceApp/app/src/main/AndroidManifest.xml
+++ b/ECommerceApp/app/src/main/AndroidManifest.xml
@@ -15,7 +15,11 @@
         <activity android:name=".about" />
         <activity android:name=".category" />
         <activity android:name=".home" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".itemform" />
+        <activity android:name=".loginform" />
+        <activity android:name=".newstaffform" />
+        <activity android:name=".MainActivity" />
+        <activity android:name=".MainActivity1">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
